--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ if(encurtar === 'sim'){
 
 
 
-fetch('http://gl7.me/api/?key=LwBFBJI1ABVc&url='+url,{mode: 'cors'})
+fetch('https://gl7.me/api/?key=LwBFBJI1ABVc&url='+url,{mode: 'cors'})
   .then(response => {
     return response.json()
   })
