--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <p class="alt">
                 Clique em continuar para ser direcionado para a página solicitada.
             </p>
-            <a href="#" class="custom-url" id="redirect">Continuar</a>
+            <a href="#" class="custom-url" id="redirect">CONTINUAR >></a>
         </div>
     </div>
 </body>
